--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <p>This is my page.</p>
-        <p>There's nothing here, at the moment...</p>
+        <p>There's nothing here, at the moment.</p>
     </body>
 </html>
