Added login stuff

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <p>This is my page.</p>
         <p>There's nothing here, at the moment.</p>
+        <p>Login form</p>
     </body>
 </html>
